salesforce-sdd-integration/force-app/main/default/objects/ErrorLog__c/ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Log técnico genérico y reutilizable por cualquier funcionalidad. Registra cada operación rechazada con su mensaje de negocio y su detalle técnico. Solo visible para administradores.</description>
    <label>Log de Errores</label>
    <nameField>
        <displayFormat>ERR-{000000}</displayFormat>
        <label>Número de log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs de Errores</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>