salesforce-sdd-integration/force-app/main/default/objects/ErrorLog__c/fields/BusinessMessage__c.field-meta.xml
<CustomField>
    <fullName>BusinessMessage__c</fullName>
    <description>Mensaje claro que recibió el llamador.</description>
    <label>Mensaje de negocio</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>