salesforce-sdd-integration/force-app/main/default/objects/ErrorLog__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Canal por el que llegó la operación (por ejemplo, "ExternalSystem", "Agent"). Texto libre para ser genérico.</description>
    <label>Canal</label>
    <type>Text</type>
    <length>40</length>
</CustomField>