salesforce-sdd-integration/force-app/main/default/objects/ErrorLog__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>Datos adicionales, por ejemplo "Pedido 2 de 3, Id recibido: ...".</description>
    <label>Contexto</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>