salesforce-sdd-integration/force-app/main/default/objects/ErrorLog__c/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <description>Código estable del error (por ejemplo, OPPORTUNITY_NOT_FOUND).</description>
    <label>Código de error</label>
    <required>true</required>
    <type>Text</type>
    <length>60</length>
</CustomField>