salesforce-sdd-integration/force-app/main/default/objects/ErrorLog__c/fields/OccurredAt__c.field-meta.xml
<CustomField>
    <fullName>OccurredAt__c</fullName>
    <description>Momento en que ocurrió el error.</description>
    <label>Fecha/hora</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>