salesforce-sdd-integration/force-app/main/default/objects/ErrorLog__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>Id del registro involucrado (por ejemplo, la Oportunidad del pedido que falló).</description>
    <label>Id de registro relacionado</label>
    <type>Text</type>
    <length>18</length>
</CustomField>