salesforce-sdd-integration/force-app/main/default/objects/ErrorLog__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Funcionalidad que generó el error (por ejemplo, "Cotizador de Oportunidades").</description>
    <label>Funcionalidad de origen</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>