salesforce-sdd-integration/force-app/main/default/objects/ErrorLog__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>Código de estado devuelto al llamador (400, 500), si aplica.</description>
    <label>Código HTTP</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>