salesforce-sdd-integration/force-app/main/default/objects/ErrorLog__c/fields/TechnicalDetail__c.field-meta.xml
<CustomField>
    <fullName>TechnicalDetail__c</fullName>
    <description>Detalle interno para diagnóstico (excepción, stack trace, respuesta del proveedor). Nunca se devuelve al llamador.</description>
    <label>Detalle técnico</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>